maze.lessons.maze.island.IslandMaze.scala.error
Escaper:41: error: too many arguments for method droite: ()Unit
        droite(2)
              ^